# corewar

./: ._examples  ._exe  ._hash.c  ._libft  ._op.c  ._open_read.c  ._resources  .cor  CMakeLists.txt  asm_to_binary.c  collision.c  corewar.h  corewar_valid.h  ft_command.c  ft_name_comment.c  ft_strsplit_v2.c  hash.c  main.c  op.c  op.h  turtl4345456e.cor  turtle.cor  valid.c  zork.s
examples/: ._bigzork.s  ._fluttershy.s  ._helltrain.cor  ._turtle.s  ._zork.cor  .nfs.20051092.938d  bee_gees.s  bigzork.cor  turtle.cor  turtle.s
exe/: ._asm  ._corewar
libft/: ._Makefile  ._ft_arg_void.c  ._ft_atoi.c  ._ft_binary.c  ._ft_bzero.c  ._ft_character.c  ._ft_check.c  ._ft_count_words.c  ._ft_finder.c  ._ft_flag_char.c  ._ft_int_min.c  ._ft_isalnum.c  ._ft_isalpha.c  ._ft_isascii.c  ._ft_isdigit.c  ._ft_isprint.c  ._ft_isspace.c  ._ft_itoa.c  ._ft_len_char.c  ._ft_len_int.c  ._ft_lstadd.c  ._ft_lstdel.c  ._ft_lstdelone.c  ._ft_lstiter.c  ._ft_lstmap.c  ._ft_lstnew.c  ._ft_max.c  ._ft_max_int.c  ._ft_memalloc.c  ._ft_memccpy.c  ._ft_memchr.c  ._ft_memcmp.c  ._ft_memcpy.c  ._ft_memcpy_rev.c  ._ft_memdel.c  ._ft_memmove.c  ._ft_memset.c  ._ft_min_fild_width.c  ._ft_null_format.c  ._ft_num_len.c  (+71 more)
resources/: ._corewar
resources/corewar/: ._asm  ._champs  ._corewar
resources/corewar/champs/: ._42.cor  ._42.s  ._Backward.s  ._Car.s  ._Death.s  ._Gagnant.s  ._Octobre_Rouge_V4.2.s  ._Survivor.s  ._Torpille.s  ._barriere.cor  ._barriere.s  ._championships  ._ex.s  ._jumper.s  ._lde.s  ._leeloo.s  ._mat.s  ._maxidef.s  ._mortel.s  ._new.s  ._sebc.s  ._slider2.s  ._tdc2.s  ._tdc3.s  (+2 more)
(+66 files in other folders)
